# polpy

./: README.md  pyproject.toml  test_poldata_new
data/: CZTI_POLRSP_EMIN_110_EMAX_1000.prsp  CZTI_POLRSP_EMIN_110_EMAX_1000_GRB180120A.prsp  CZTI_POLRSP_EMIN_110_EMAX_1000_GRB190530A.prsp  POLAR_161218A.rmfarf  POLAR_161218B.rmfarf  POLAR_170114A.rmfarf  cztipol_GRB180120A.pevt  cztipol_GRB190530A.pevt
examples/: 190530A_joint_spectrum_polarization.ipynb  AstroSat_CZTI_polarization_results_GRB190530A.fits  example.py  polar_GRB161218A.py  polar_GRB161218B.py  polar_GRB170114A.py  verify_czti_pol_fit.ipynb  verify_czti_pol_fit.py
examples/grb_scripts/: GRB161218B_joint_czti_polar.py
fitting/: 190530A_joint_spectrum_polarization.ipynb  AstroSat_CZTI_polarization_results_GRB190530A.fits  Joint_pol_fit.ipynb
fitting/GRB161218B/: CZTI_POLRSP_EMIN_120_EMAX_1000_GRB161218B.prsp  GRB161218B.py  JointVerification.py  Joint_Fermi_Spectrum_CZTI_Polarization_GRB161218B.ipynb  Joint_pol_fit.ipynb  b0_bkg.h5  cztipol_GRB161218B.pevt  glg_cspec_b0_bn161218356_v00.pha  glg_cspec_b0_bn161218356_v01.rsp2  glg_cspec_n3_bn161218356_v00.pha  glg_cspec_n3_bn161218356_v01.rsp2  glg_cspec_n4_bn161218356_v00.pha  glg_cspec_n4_bn161218356_v01.rsp2  glg_cspec_n8_bn161218356_v00.pha  glg_cspec_n8_bn161218356_v01.rsp2  n3_bkg.h5  n4_bkg.h5  n8_bkg.h5  verification.py
polpy/: polarizationlike.py  poldata.py  polresponse.py
tests/: test_RMF_ARF_170114A.fits  test_import.py  test_instrument_response.py  test_poldata_new.py  test_polresponse_new  test_polresponse_new.py  test_read_data.py
(+72 files in other folders)
